fix(lhci): fix color-contrast error

--- a/src/templates/_variables.scss
+++ b/src/templates/_variables.scss
@@ -1,3 +1,4 @@
 $bg-color: #2d2d2d;
 $primary-color: #c7c7c7;
 $wideBreakpoint: 600px;
+$link-color: #66cccc;
