--- a/src/templates/page.scss
+++ b/src/templates/page.scss
@@ -40,8 +40,4 @@ main {
     font-size: 100%;
     margin-bottom: 0;
   }
-
-  a {
-    color: #3f797a;
-  }
 }
